--- a/dm_cleaning.ipynb
+++ b/dm_cleaning.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import pandas as pd\n",
     "# download Aiyas data\n",
-    "dict2 = ['train1.csv','train2.csv','train3.csv','train4.csv','train5.csv','train6.csv','train7.csv','train7.csv','train8.csv','train9.csv']\n",
+    "dict2 = ['train1.csv','train2.csv','train3.csv','train4.csv','train5.csv','train6.csv','train7.csv','train8.csv','train9.csv']\n",
     "list1 = []\n",
     "frame = pd.DataFrame()\n",
     "for i in range(0,9):\n",
